[package]
name = "example-mapp"
version = "0.1.0"
authors = ["Jakub HlusiÄka <jakub.hlusicka@email.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ['cdylib']

[dependencies]
wasm-bindgen = "0.2.55"
lazy_static = "1.4.0"
ammolite-math = { path = "../ammolite/ammolite-math" }
serde = { version = "1.0", features = ["derive"] }
json5 = "0.2.5"
mlib = { path = "../mlib" }
