[package]
name = "example-mapp-2"
version = "0.1.0"
authors = ["Jakub Hlusička <jakub.hlusicka@email.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ['cdylib', 'lib']

[dependencies]
ammolite-math = { path = "../ammolite/ammolite-math" }
mlib = { path = "../mlib" }
include_dir = { git = "https://github.com/erickt/include_dir", branch = "sort" }
json5 = "0.2.5"
lazy_static = "1.4.0"
regex = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.55"
